<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    android:background="?attr/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/view_toolbar"/>

    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:background="?attr/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_username"
            android:textColorHint="?attr/login_form_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/login_form_username"
                android:textSize="@dimen/login_form_text"
                android:hint="@string/please_input_your_email_or_nick"
                android:textColorHint="?attr/login_form_hint"
                android:background="@drawable/selector_shape_input"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_password"
            android:textColorHint="?attr/login_form_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/login_form_username"
                android:textSize="@dimen/login_form_text"
                android:inputType="textPassword"
                android:hint="@string/please_input_password"
                android:textColorHint="?attr/login_form_hint"
                android:background="@drawable/selector_shape_input"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_marginTop="20dp"
            android:text="@string/login"
            android:textSize="@dimen/login_submit_text"
            android:background="@drawable/selector_shape_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>







</LinearLayout>